[tool.poetry]
name = "vrc-v2t-osc"
version = "0.1.0"
description = ""
authors = ["phillychi3 <phillychi3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-osc = "^1.9.3"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
